Clean up tmux config, update plugins

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,62 +1,80 @@
-# Enable true color
-set -g default-terminal "${TERM}"
+# --- GENERAL SETTINGS --- #
 
-# enable image preview in yazi
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
+# color support
+set -g default-terminal "${TERM}" # inherit terminal capabilities
+set -sa terminal-overrides ',*:RGB' # enable true color
 
-set-option -g focus-events on
+# consistent environment variables
+# required for yazi image support
+set -ga update-environment TERM # terminal type
+set -ga update-environment TERM_PROGRAM # terminal program
 
-# remap prefix from 'C-b' to 'C-a'
+# allow passthrough of advanced escape sequences
+# enables support for inline images in yazi and snacks_image
+set -g allow-passthrough on 
+
+# pass focus state
+set -g focus-events on 
+
+# enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
+
+# address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -s escape-time 0
+
+# increase scrollback buffer size from 2000 to 50000 lines
+set -g history-limit 50000
+
+# increase tmux messages display duration from 750ms to 4s
+set -g display-time 4000
+
+# --- KEY BINDINGS --- #
+
+# change prefix from 'C-b' to 'C-Space'
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
-# split panes using | and _ with or without shift and keep working directory
-# vertically
+# split panes using | and _ with or without shift, keep working directory
+# vertical
 unbind %
-bind-key "|" split-window -h -c "#{pane_current_path}"
-bind-key "\\" split-window -fh -c "#{pane_current_path}"
-# horizontally
+bind "|" split-window -h -c "#{pane_current_path}"
+bind "\\" split-window -fh -c "#{pane_current_path}"
+# horizontal
 unbind '"'
-bind-key "_" split-window -fv -c "#{pane_current_path}"
-bind-key "-" split-window -v -c "#{pane_current_path}"
+bind "_" split-window -fv -c "#{pane_current_path}"
+bind "-" split-window -v -c "#{pane_current_path}"
 
-# resize and maximize panes with prefix + hjklm
+# resize and maximize panes with prefix + hjklm (repeatable)
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
-# create new windows with same working directory
+# create a new window, keep working directory
 bind c new-window -c "#{pane_current_path}"
 
-# swap windows with < and > (shift,.)
+# swap windows with < and >
 bind -r "<" swap-window -d -t -1
 bind -r ">" swap-window -d -t +1
-
-# join pane to window
-bind j choose-window 'join-pane -h -s "%%"' # horizontally
-bind J choose-window 'join-pane -s "%%"' #vertically
 
 # return to marked pane (C-m) using `
 bind \` switch-client -t'{marked}'
 
+# vim movements for tmux’s copy mode
+setw -g mode-keys vi
+bind -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
+
 # reload config file
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded ~/.config/tmux/tmux.conf"
 
-# enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
-
-# vim movements for tmux’s copy mode
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
+# --- WINDOWS --- #
 
 # don't rename windows automatically
-set-option -g allow-rename off
+set -g allow-rename off
 
 # start counting pane and window number at 1
 set -g base-index 1
@@ -65,38 +83,33 @@ setw -g pane-base-index 1
 # renumber windows after a window is closed
 set -g renumber-windows on
 
-# https://github.com/3rd/image.nvim/?tab=readme-ov-file#tmux
-# This is needed for images in neovim
-set -gq allow-passthrough on
-set -g visual-activity off
-
-# --- STATUS BAR --- #
-
-set-option -g status-style bg=default # transparent background
-set-option -g status-position top # move statusbar to the top
-set-option -g status-interval 1 # update statuses every minute
-
-set -g window-status-format " #I:#W " # use index:window format
-set -g window-status-current-format "#[fg=white][#[fg=green]#I:#W#[fg=white]]" # [index:window] for active state
-set -g window-status-style 'bg=default fg=default' # no decoration for window tabs
-
-set-option -g status-right '%H:%M  ' # HH:MM clock for the right status
-
-
 # --- PLUGINS --- #
 
 # tpm plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 # plugins
-set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
-# set -g @plugin 'tmux-plugins/tmux-open' # `o` open highlighted file in default app, `C-o` open file in $EDITOR
+set -g @plugin 'christoomey/vim-tmux-navigator' # navigating panes and vim splits with Ctrl-hjkl
+set -g @plugin 'Morantron/tmux-fingers' # quickly copy relevant parts and optionally act on them
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
 
-# --- MULTILINE --- #
+# --- STATUS BAR --- #
 
-# Add empty line under main status bar (has to be in the end to work)
+set -g status-style bg=default # transparent background
+set -g status-position top # move statusbar to the top
+set -g status-interval 1 # update statuses every minute
+
+set -g window-status-format " #I:#W " # use index:window format
+set -g window-status-current-format "#[fg=white][#[fg=green]#I:#W#[fg=white]]" # [index:window] for active state
+set -g window-status-style 'bg=default fg=default' # no decoration for window tabs
+
+set -g status-right '%H:%M  ' # HH:MM clock for the right status
+
+# --- MULTILINE STATUS BAR --- #
+
+# add empty line under main status bar for readability 
+# has to be in the end to work
 set -Fg 'status-format[1]' '#{status-format[0]}'
 set -g 'status-format[1]' ''
 set -g status 2
