--- a/dot_config/tmux/plugins/tpm/dot_git/config
+++ b/dot_config/tmux/plugins/tpm/dot_git/config
@@ -11,3 +11,6 @@
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
+[submodule "lib/tmux-test"]
+	active = true
+	url = https://github.com/tmux-plugins/tmux-test.git
